BE - minor fixes